<resources>
    <string name="app_name">SmartWallpapers</string>
    <string name="ok">Ok</string>
    <string name="info">Tutorial</string>
    <string name="automatic">Automatic wallpaper change</string>
    <string name="timer">Timer</string>
    <string name="photo_refresh_interval">SET REFRESH INTERVAL</string>
    <string name="refresh_info">Enter wallpaper refresh interval in minutes.</string>
    <string name="apply">apply</string>
    <string name="enable_auto_refreshing">Enable auto-refreshing wallpaper</string>
    <string name="display_quote">Do you want to display this quote on top of your wallpaper?</string>
    <string name="display_collection">Do you want to display a %s photo as wallpaper?</string>
    <string name="display_photo">Do you want to display this photo as wallpaper?</string>
    <string name="app_info">Change wallpaper by pressing middle button on image/quote.
                        \n\nClick to enter in a collection
                        \n\nClick to view an photo
                        \n\n Status bar buttons (from left to right):
                                        \n \t -> automatic wallpaper refresh
                                        \n \t -> change view to photos/quotes
                                        \n \t -> settings menu
                        </string>
    <string name="Search_photos">Search photos</string>
    <string name="Search">Search</string>
    <string name="search_from_your_localization">Search photos from your current localization</string>
    <string name="enter_word">Please enter a word to search</string>
    <string name="quote_size_question">Choose size:</string>
    <string name="qd_small">small</string>
    <string name="qd_medium">medium</string>
    <string name="qd_large">large</string>
    <string name="quote_color_question">Choose color: </string>
    <string name="qd_white">white</string>
    <string name="qd_black">black</string>
    <string name="qd_green">green</string>
    <string name="quote_localization_question">Choose localization:</string>
    <string name="qd_top">top</string>
    <string name="qd_middle">middle</string>
    <string name="qd_bottom">bottom</string>
    <string name="prefMenuItem">See Preferences</string>

</resources>
