<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:layout_editor_absoluteY="81dp">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/qd_size_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quote_size_question" />

            <RadioGroup
                android:id="@+id/quote_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <RadioButton
                    android:id="@+id/qd_rb_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/qd_small"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/qd_rb_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/qd_medium" />

                <RadioButton
                    android:id="@+id/qd_rb_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/qd_large" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/qd_color_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quote_color_question" />

            <RadioGroup
                android:id="@+id/quote_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/qd_rb_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qd_white"
                    android:checked="true"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="511dp" />

                <RadioButton
                    android:id="@+id/qd_rb_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/qd_black" />

                <RadioButton
                    android:id="@+id/qd_rb_green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/qd_green" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/qd_localization_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quote_localization_question" />

            <RadioGroup
                android:id="@+id/quote_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/qd_rb_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qd_top" />

                <RadioButton
                    android:id="@+id/qd_rb_middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/qd_middle"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/qd_rb_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/qd_bottom" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/save_qd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="save"
                android:background="@color/dark_grey"/>
        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>