<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:layout_marginTop="16sp"
        android:text="@string/Search_photos"
        android:textAlignment="center"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_search"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/Search"
            android:inputType="text"
            android:textAlignment="center" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_search_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginLeft="8sp"
        android:layout_marginRight="8sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:text="@string/search_from_your_localization"
            android:textAlignment="center"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/search_button_loc"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:src="@drawable/ic_search_black_24dp" />

    </LinearLayout>


</LinearLayout>